--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="/leaves.png" />
+
+    <!-- Favicon links -->
+    <link rel="icon" type="image/png" href="/tea.png" />
+    <!-- Optional: larger icons -->
+    <link rel="apple-touch-icon" href="/tea.png" />
   </head>
 
   <body>
